Add SDK initialization using Access Token

--- a/src/assets/css/call-tester.less
+++ b/src/assets/css/call-tester.less
@@ -283,6 +283,11 @@ body {
   }
 }
 
+.container-start-title {
+  margin-top: 25px;
+  font-size: 17px;
+}
+
 .container-explanation-title {
   margin-bottom: 25px;
   margin-top: 25px;
